fix: responsiveness on mobile

--- a/src/stylesheets/base.scss
+++ b/src/stylesheets/base.scss
@@ -295,6 +295,7 @@ body {
       }
 
       &.selected {
+        z-index: 2;
         position: relative;
         max-height: 10000px;
         max-width: 40%;
